# SDS385

./: .gitignore  final_pr.txt
R/: process_urldata.R
exercises/: template.tex
exercises/common/: backtrack.py  logistic_common.py
exercises/exercises01/: README.md  ex01.tex  factorsolve.py  genTestData.R  inversionsolve.py  newtonmethod.py  sparsesolve.py  steepestdescent.py  testOpt.py  testsolve.py
exercises/exercises01/common/: backtrack.py
exercises/exercises01/optimization/: genTestData.R  newtonmethod.py  steepestdescent.py  testDummy.py  testOpt.py
exercises/exercises01/tex/: exercises01-SDS385.tex
exercises/exercises01/weighted-least-squares/: inversionsolve.py
exercises/exercises02/: README.md
exercises/exercises02/code/: sgd.py  test.csv  testDummy.py  test_answers.txt
exercises/exercises02/tex/: ex02.el  ex02.tex
exercises/exercises03/: README.md
exercises/exercises03/code/: backtrack.py  bfgs.py  newtonmethod.py  steepestdescent.py
exercises/exercises03/code/common/: plot_common.py  searchmethod.py
exercises/exercises03/tex/: ex03.tex
exercises/exercises04/: README.md
exercises/exercises04/code/: .#adagrad.py  adadelta.py  adagrad.py  rmsprop.py  sgd.py  sgd_minibatch.py
exercises/exercises04/code/common/: data_common.py
exercises/exercises04/sgd_c++/: CMakeLists.txt  Makefile  O3Example.cpp  README.md  hints.md  read_svmlight.cpp  read_svmlight.hpp  results.txt  sgd.cpp  sgd_utility.cpp  sgdlogit.cpp  test_funcs.cpp
exercises/exercises04/sgd_c++/include/: eigenMatrixTypes.hpp  read_svmlight.hpp  sgd_utility.hpp  usertypes.hpp
exercises/exercises05/: README.md
exercises/exercises05/codes/: Ex05 Plots.ipynb  LASSO.ipynb  Validation.ipynb  crossval.py
exercises/exercises05/plots/: Ex05 Plots.ipynb
exercises/exercises05/tex/: ex05.tex
exercises/exercises06/: README.md
exercises/exercises06/code/: proxgrad.py  proxgrad_accel.py
exercises/exercises06/tex/: ex06.tex
exercises/exercises07/: admm.py
exercises/exercises08/code/: admm.py  reader.py  solvers.py
exercises/exercises08/tex/: ex08.tex
exercises/exercises09/code/: pmf.py
exercises/exercises09/tex/: ex09.tex
exercises/finalproject/code/: LDA Data Analysis.ipynb  generative.py  lambda.pickle  lda.py  lda.py.lprof  wordlist1.txt  wordlist2.txt  wordlist3.txt  wordlist4.txt
exercises/finalproject/code/testdocs/: lda_out_0.txt  lda_out_1.txt  lda_out_10.txt  lda_out_100.txt  lda_out_1000.txt  lda_out_1001.txt  lda_out_1002.txt  lda_out_1003.txt  lda_out_1004.txt  lda_out_1005.txt  lda_out_1006.txt  lda_out_1007.txt  lda_out_1008.txt  lda_out_1009.txt  lda_out_101.txt  lda_out_1010.txt  lda_out_1011.txt  lda_out_1012.txt  lda_out_1013.txt  lda_out_1014.txt  lda_out_1015.txt  lda_out_1016.txt  lda_out_1017.txt  (+9977 more)
exercises/finalproject/tex/: bib.bib  lda1.txt  lda2.txt  lda3.txt  lda4.txt  writeup.tex  writeup2.tex
